# timerviz

./: MANIFEST.in  deklein_coords.txt  deklein_internal.txt  dotlan_classified.json  dotlan_new_regions.json  map_data.json  setup.cfg  tribute_coords.txt  tribute_internal.txt
scripts/: apply_dotlan_layout.mjs  build_map_data.mjs  build_map_data.py  esi-cache.json
timerviz/: apps.py  auth_hooks.py  models.py  urls.py  views.py
timerviz/migrations/: 0001_initial.py  0002_systemposition.py
timerviz/static/timerviz/: map-data.json  timerviz.css  timerviz.js
timerviz/templates/timerviz/: view.html
