[metadata]
name = aa-timerviz
version = 0.1.0
description = Alliance Auth plugin — structure timer map visualization
long_description = file: README.md
long_description_content_type = text/markdown
author = Shawn Connell
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    allianceauth>=3.0

[options.entry_points]
allianceauth.app =
    timerviz = timerviz.apps:TimervizConfig

[options.package_data]
timerviz =
    templates/**/*
    static/**/*
    migrations/*.py
